
2008-06-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/builder.h, src/builder.cpp: Make most functions 
	static.

	* src/mol.cpp: Use OBBuilder::GetNewBondVector() in AddHydrogens(). 

2005-06-13  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/mdlformat.cpp: Use static_cast in the min function.

2008-06-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/mol.h, src/mol.cpp (GetTitle): Add a parameter
	to replace newlines with spaces. Fixes PR#1984742.

	* configure.in: Check for xlocale.h, locale.h, and uselocale functions.

	* src/data.cpp, src/ops/loader.cpp, src/ops/optransform.cpp,
	src/descriptors/groupcontrib.cpp, src/builder.cpp,
	src/forcefields/forcefieldmm2.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp,
	src/forcefields/forcefieldghemical.cpp, src/obconversion.cpp:
	Change locale using uselocale if available and reset it to the
	afterwards. Update of previous change, suggested by Benoit.

	* include/openbabel/bond.h, include/openbabel/atom.h,
	src/bond.cpp: Fixes for "const" correctness. It's now possible to
	get the bond length of a const OBBond.
	
2008-06-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp, src/ops/loader.cpp, src/ops/optransform.cpp,
	src/descriptors/groupcontrib.cpp, src/builder.cpp,
	src/forcefields/forcefieldmm2.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp,
	src/forcefields/forcefieldghemical.cpp, src/obconversion.cpp:
	Change locale before parsing files to use "C" numeric locale and
	reset it to the original state afterwards. Should solve PR#1785463.

	* src/obiter.cpp: Fixes from Izhar for DFS and BFS iterators.

	* src/mol.cpp, include/openbabel/mol.h: Added iterative
	GetFragment method to augment Separate(), contributed by Izhar.

2008-06-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/phmodel.cpp (OBPhModel::CorrectForPH): Fix PR#1835204. Allow